--- a/index.html
+++ b/index.html
@@ -16,29 +16,434 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>flexbox backroads</h1>
     <!-- header  -->
+    <header id="home">
+      <!--Navbar-->
+      <nav class="navbar">
+        <div class="nav-center">
+          <!--nav header-->
+          <div class="nav-header">
+            <img src="./images/logo.svg" class="nav-logo" alt="" />
+            <button type="button" class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!--end of nav header-->
+          <!--footer links-->
+          <ul class="nav-links" id="nav-links">
+            <!--single link-->
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
+            <li>
+              <a href="#services" class="nav-link scroll-link">services</a>
+            </li>
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <li>
+              <a href="#gallery" class="nav-link scroll-link">gallery</a>
+            </li>
+          </ul>
+          <!--end of nav link-->
+          <ul class="nav-icons">
+            <!--single icon-->
+            <li>
+              <a href="#" class="nav-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <!--end of icon-->
+            </li>
+            <!--single icon-->
+            <li>
+              <a href="#" class="nav-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <!--end of icon-->
+            </li>
+            <!--single icon-->
+            <li>
+              <a href="#" class="nav-icon">
+                <i class="fab fa-squarespace"></i>
+              </a>
+              <!--end of icon-->
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!--hero-->
+      <div class="hero">
+        <div class="hero-banner">
+          <h1>Continue exploring</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum
+            voluptas qui non adipisci facilis explicabo?
+          </p>
+          <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+        </div>
+      </div>
+    </header>
     <!-- end of header  -->
 
     <!-- about section -->
+    <section class="section" id="about">
+      <!--title-->
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <!--end of title-->
+      <div class="section-center about-center">
+        <!--about img wrapper-->
+        <article class="about-img">
+          <img
+            src="./images/about.jpeg"
+            class="about-photo"
+            alt="awesome beach"
+          />
+        </article>
+        <!--about info-->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed,
+            maxime! Sunt vero beatae exercitationem optio amet soluta
+            voluptatibus labore velit.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+            exercitationem iste delectus rem non cum expedita dicta perspiciatis
+            facilis fuga?
+          </p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="section services" id="services">
+      <!--section title-->
+      <div class="section-title">
+        <h2>our <span>our services</span></h2>
+      </div>
+      <!--end of title-->
+      <div class="section-center services-center">
+        <!--single service-->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              veniam doloribus. Deleniti voluptatibus facere minima!
+            </p>
+          </div>
+        </article>
+        <!--end of service-->
+        <!--single service-->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">Endless biking</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              veniam doloribus. Deleniti voluptatibus facere minima!
+            </p>
+          </div>
+        </article>
+        <!--end of service-->
+        <!--single service-->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              veniam doloribus. Deleniti voluptatibus facere minima!
+            </p>
+          </div>
+        </article>
+        <!--end of service-->
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section" id="featured">
+      <!--section title-->
+      <div class="section-title">
+        <h2>featured <span>tours</span></h2>
+      </div>
+      <!--end section title-->
+      <div class="section-center featured-center">
+        <!--single tour-->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-1.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">august 26th 2020</p>
+          </div>
+          <!--tour info-->
+          <div class="tour-info">
+            <h4>tibet adventure</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatibus minus sequi nesciunt velit dignissimos nemo
+              distinctio numquam quos error dicta?
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  china
+                </span>
+              </p>
+
+              <p>from $2100</p>
+            </div>
+          </div>
+        </article>
+        <!--end of single tour -->
+        <!--single tour-->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-2.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">october 1st 2020</p>
+          </div>
+          <!--tour info-->
+          <div class="tour-info">
+            <h4>best of java</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatibus minus sequi nesciunt velit dignissimos nemo
+              distinctio numquam quos error dicta?
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  indonesia
+                </span>
+              </p>
+
+              <p>from $1400</p>
+            </div>
+          </div>
+        </article>
+        <!--end of single tour -->
+        <!--single tour-->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-3.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">september 15th 2020</p>
+          </div>
+          <!--tour info-->
+          <div class="tour-info">
+            <h4>explore hong kong</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatibus minus sequi nesciunt velit dignissimos nemo
+              distinctio numquam quos error dicta?
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  hong kong
+                </span>
+              </p>
+
+              <p>from $4100</p>
+            </div>
+          </div>
+        </article>
+        <!--end of single tour -->
+        <!--single tour-->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-4.jpeg" class="tour-img" alt="" />
+            <p class="tour-date">december 15th 2020</p>
+          </div>
+          <!--tour info-->
+          <div class="tour-info">
+            <h4>kenya highlights</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatibus minus sequi nesciunt velit dignissimos nemo
+              distinctio numquam quos error dicta?
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  kenya
+                </span>
+              </p>
+
+              <p>from $3300</p>
+            </div>
+          </div>
+        </article>
+        <!--end of single tour -->
+      </div>
+      <div class="tour-btn">
+        <a href="#" class="btn">all tours</a>
+      </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
+    <section class="section contact" id="contact">
+      <div class="section-center contact-center">
+        <!--contact title-->
+        <article class="contact-title">
+          <h3>want latest tour info and updates?</h3>
+          <p>Sign up for newsletter and stay up to date</p>
+        </article>
+        <form class="contact-form">
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="your email"
+          />
+          <button type="submit" class="btn-submit">submit</button>
+        </form>
+      </div>
+    </section>
 
     <!-- end of contact -->
 
     <!-- gallery  -->
-
+    <section id="gallery">
+      <div class="gallery-center">
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-3.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-4.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-5.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-6.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+        <!--single item-->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!--end of item-->
+      </div>
+    </section>
     <!-- end of gallery  -->
 
     <!-- footer -->
-
+    <footer class="section footer">
+      <!--footer links-->
+      <ul class="footer-links">
+        <!--single link-->
+        <li>
+          <a href="#home" class="footer-link scroll-link">home</a>
+        </li>
+        <li>
+          <a href="#about" class="footer-link scroll-link">about</a>
+        </li>
+        <li>
+          <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
+        <li>
+          <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </li>
+      </ul>
+      <!--end of footer link-->
+      <!--footer icon-->
+      <ul class="footer-icons">
+        <!--single icon-->
+        <li>
+          <a href="#" class="footer-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <!--end of icon-->
+        </li>
+        <!--single icon-->
+        <li>
+          <a href="#" class="footer-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <!--end of icon-->
+        </li>
+        <!--single icon-->
+        <li>
+          <a href="#" class="footer-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+          <!--end of icon-->
+        </li>
+      </ul>
+      <p class="copyright">
+        copyright &copy; Mk travel tour company <span id="date"></span>all
+        rights reserved
+      </p>
+    </footer>
     <!-- js -->
     <script src="./js/app.js"></script>
   </body>
